apps/dev/anki/service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anki-sync-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: anki-sync-server
  template:
    metadata:
      labels:
        app: anki-sync-server
    spec:
      containers:
      - name: anki-sync-server
        image: "ghcr.io/sfmunoz/anki-sync-server:25.09.2-2"
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: data
          mountPath: /anki_data/
      volumes:
      - name: data
        hostPath:
          path: /opt/anki-sync-server
          type: DirectoryOrCreate
