apps/dev/anki/service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: anki-sync-server
  namespace: anki
spec:
  rules:
  - host: anki.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: anki-sync-server
            port:
              number: 8080
